--- a/src/css/2-snackbar.css
+++ b/src/css/2-snackbar.css
@@ -9,6 +9,10 @@
     font-size: 14px;
 }
 
+form{
+    padding: 0 50px;
+}
+
 .dalay {
     display: flex;
     flex-direction: column;
@@ -17,8 +21,11 @@
 }
 
 .dalay input{
+    padding: 8px 18px;
+
     width: 360px;
     height: 40px;
+
     border-radius: 4px;
     border: 1px solid #808080;
 
@@ -26,12 +33,53 @@
 }
 
 fieldset {
+    display: inline-flex;
+    gap: 48px;
+
+    margin: 0;
     padding-bottom: 8px;
     padding-top: 24px;
+    padding-left: 48px;
+    padding-right: 48px;
+
+    width: 360px;
+
+    border: 1px solid #808080;
+    border-radius: 4px;
+
+    color: #2E2F42;
+
+    transition: all var(--transition);
 }
 
-fieldset {
-display: flex;
-justify-content: ;
-gap: 48px;
+fieldset:hover{
+    border-color: #000000;
+}
+
+fieldset > label{
+    display: inline-flex;
+    align-items: center;
+}
+
+button{
+    margin-top: 24px;
+    
+    width: 360px;
+    height: 40px;
+
+    border: 1px solid #4E75FF;
+    border-radius: 8px;
+    
+    color: #fff;
+    background: #4E75FF;
+
+    font-weight: 500;
+    font-size: 16px;
+
+    transition: all var(--transition);
+}
+
+button:hover{
+    background: #6C8CFF;
+    border-color: #6C8CFF;
 }
